// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Live A11y I can see the skip to content link 1`] = `"Pređite na sadržaj"`;

exports[`Canonical Live Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, na srpskom",
  "url": "/serbian/lat",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 2`] = `
{
  "text": "Zašto BBC zaslužuje vaše poverenje",
  "url": "https://www.bbc.com/serbian/lat/institutional-50173730",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 3`] = `
{
  "text": "Pravila korišćenja",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 4`] = `
{
  "text": "O BBC-ju",
  "url": "https://www.bbc.co.uk/aboutthebbc/",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 5`] = `
{
  "text": "Pravila privatnosti",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 6`] = `
{
  "text": "Kolačići",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 7`] = `
{
  "text": "Kontaktirajte BBC",
  "url": "https://www.bbc.co.uk/serbian/send/u50853665",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 8`] = `
{
  "text": "BBC News na drugim jezicima",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Live Footer Anchors should match text and url 9`] = `
{
  "text": "Pročitajte naša pravila o linkovanju drugih sajtova.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Live Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/serbian/lat"`;

exports[`Canonical Live Footer Paragraphs should match text 1`] = `"© 2026 BBC. BBC nije odgovoran za sadržaj drugih sajtova. Pročitajte naša pravila o linkovanju drugih sajtova."`;

exports[`Canonical Live Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, na srpskom",
  "svg": "http://localhost:7081//serbian/images/brandLogo.svg",
}
`;

exports[`Canonical Live Header Navigation link should match text and url 1`] = `
{
  "text": "Početna strana",
  "url": "/serbian/lat",
}
`;

exports[`Canonical Live Header Navigation link should match text and url 2`] = `
{
  "text": "Gledajte",
  "url": "/serbian/topics/c44vyp5g049t/lat",
}
`;

exports[`Canonical Live Main heading should match text 1`] = `"Live test page"`;

exports[`Canonical Live SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/serbian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Live SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Live SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Live SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Live SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Live SEO Canonical link 1`] = `"http://localhost:7081/serbian/live/media-23179005/lat"`;

exports[`Canonical Live SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Live SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Live SEO Heading level 1 1`] = `"Live test page"`;

exports[`Canonical Live SEO Lang attribute 1`] = `"sr-latn"`;

exports[`Canonical Live SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@id": "http://localhost:7081/serbian/live/media-23179005/lat",
      "@type": "WebPage",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News na srpskom",
        "noBylinesPolicy": "https://www.bbc.com/serbian/lat/institutional-50173730#authorexpertise",
      },
      "dateModified": "2018-01-10T15:00:00.000Z",
      "datePublished": "2018-01-10T15:00:00.000Z",
      "description": "Live test page",
      "headline": "Live test page",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "sr-latn",
        "name": "Serbian",
      },
      "isAccessibleForFree": true,
      "mainEntity": {
        "@id": "http://localhost:7081/serbian/live/media-23179005/lat#liveblog",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/serbian/live/media-23179005/lat",
        "@type": "WebPage",
        "name": "Live test page",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News na srpskom",
        "publishingPrinciples": "https://www.bbc.com/serbian/lat/institutional-50173730",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
      "url": "http://localhost:7081/serbian/live/media-23179005/lat",
    },
    {
      "@id": "http://localhost:7081/serbian/live/media-23179005/lat#liveblog",
      "@type": "LiveBlogPosting",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
        },
        "name": "BBC News na srpskom",
        "publishingPrinciples": "https://www.bbc.com/serbian/lat/institutional-50173730",
        "url": "https://www.bbc.com/serbian",
      },
      "coverageEndTime": "2018-01-10T22:00:00.000Z",
      "coverageStartTime": "2018-01-10T15:00:00.000Z",
      "dateModified": "2018-01-10T22:00:00.000Z",
      "datePublished": "2018-01-10T15:00:00.000Z",
      "headline": "Live test page",
      "image": {
        "@type": "ImageObject",
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
      },
      "isAccessibleForFree": true,
      "liveBlogUpdate": [],
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/serbian/live/media-23179005/lat",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
        },
        "name": "BBC News na srpskom",
        "publishingPrinciples": "https://www.bbc.com/serbian/lat/institutional-50173730",
        "url": "https://www.bbc.com/serbian",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
      "url": "http://localhost:7081/serbian/live/media-23179005/lat",
    },
    {
      "@id": "http://localhost:7081/serbian/live/media-23179005/lat#newsarticle",
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
        },
        "name": "BBC News na srpskom",
        "publishingPrinciples": "https://www.bbc.com/serbian/lat/institutional-50173730",
        "url": "https://www.bbc.com/serbian",
      },
      "dateModified": "2018-01-10T22:00:00.000Z",
      "datePublished": "2018-01-10T15:00:00.000Z",
      "description": "Live test page",
      "headline": "Live test page",
      "image": {
        "@type": "ImageObject",
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
      },
      "isAccessibleForFree": true,
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/serbian/live/media-23179005/lat",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png",
        },
        "name": "BBC News na srpskom",
        "publishingPrinciples": "https://www.bbc.com/serbian/lat/institutional-50173730",
        "url": "https://www.bbc.com/serbian",
      },
      "url": "http://localhost:7081/serbian/live/media-23179005/lat",
    },
  ],
}
`;

exports[`Canonical Live SEO OG description 1`] = `"Live test page"`;

exports[`Canonical Live SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png"`;

exports[`Canonical Live SEO OG image alt 1`] = `"BBC News na srpskom"`;

exports[`Canonical Live SEO OG locale 1`] = `"sr-latn"`;

exports[`Canonical Live SEO OG site name 1`] = `"BBC News na srpskom"`;

exports[`Canonical Live SEO OG title 1`] = `"Live test page - BBC News na srpskom"`;

exports[`Canonical Live SEO OG type 1`] = `"website"`;

exports[`Canonical Live SEO OG url 1`] = `"http://localhost:7081/serbian/live/media-23179005/lat"`;

exports[`Canonical Live SEO Page title 1`] = `"Live test page - BBC News na srpskom"`;

exports[`Canonical Live SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Live SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Live SEO Twitter creator 1`] = `"@bbcnasrpskom"`;

exports[`Canonical Live SEO Twitter description 1`] = `"Live test page"`;

exports[`Canonical Live SEO Twitter image alt 1`] = `"BBC News na srpskom"`;

exports[`Canonical Live SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/serbian/images/metadata/poster-1024x576.png"`;

exports[`Canonical Live SEO Twitter site 1`] = `"@bbcnasrpskom"`;

exports[`Canonical Live SEO Twitter title 1`] = `"Live test page - BBC News na srpskom"`;
